Fixed: logo line visible, name attribute to form

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    border-bottom: 1px solid rgba(#545454, .7);
+    border-bottom: 1px solid rgba(54, 54, 54, .7);
     margin-top: 45px;
     padding-bottom: 37px;
 }
